--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
     <div class="progress_bar"></div>
 
     <!-- scripts -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
+        <!--<script src="assets/js/jquery-1.12.4.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/libs/OwlCarousel2-2.2.1/owl.carousel.min.js"></script>
     <script src="assets/libs/popup/jquery.magnific-popup.js"></script>
     <script src="assets/libs/progress_bar.js"></script>
